--- a/config.toml
+++ b/config.toml
@@ -128,7 +128,7 @@ enableEmoji = true
   [[menu.header]]
     name = "CV"
     title = "CV"
-    url = "/cv/"
+    url = "/cv/cv.pdf"
     weight = 4
 
   # Configure footer  
