--- a/config.toml
+++ b/config.toml
@@ -113,7 +113,7 @@ enableEmoji = true
   [[menu.header]]
     name = "Research"
     title = "Research Portfolio"
-    url = "/project/"
+    #url = "/project/"
     weight = 2
   #[[menu.header]]
   #  name = "Talks"
@@ -123,7 +123,7 @@ enableEmoji = true
   [[menu.header]]
     name = "Teaching"
     title = "Teaching"
-    url = "/talk/"
+    #url = "/talk/"
     weight = 3
   [[menu.header]]
     name = "CV"
