--- a/config.toml
+++ b/config.toml
@@ -110,11 +110,11 @@ enableEmoji = true
   #  title = "Blog"
   #  url = "/blog/"
   #  weight = 5
-  [[menu.header]]
-    name = "Research"
-    title = "Research Portfolio"
+  #[[menu.header]]
+    #name = "Research"
+    #title = "Research Portfolio"
     #url = "/project/"
-    weight = 2
+    #weight = 2
   #[[menu.header]]
   #  name = "Talks"
   #  title = "Talks"
