--- a/config.toml
+++ b/config.toml
@@ -81,10 +81,10 @@ enableEmoji = true
       #icon      = "facebook-square" # icon name without the 'fa-'
       #icon_pack = "fab"
       #url       = "https://www.facebook.com/hashtag/ap%C3%A9ro"
-  #[[params.social]]
-     # icon      = "instagram" # icon name without the 'fa-'
-     # icon_pack = "fab"
-     # url       = "https://www.instagram.com/explore/tags/apero/"
+  [[params.social]]
+      icon      = "calendar-check" # icon name without the 'fa-'
+      icon_pack = "fab"
+      url       = "https://calendly.com/leonierettig/office-hours"
   [[params.social]]
       icon      = "twitter" # icon name without the 'fa-'
       icon_pack = "fab"
