--- a/config.toml
+++ b/config.toml
@@ -86,8 +86,8 @@ enableEmoji = true
       icon_pack = "fab"
       url       = "https://twitter.com/leonie_rettig"
   [[params.social]]
-      icon      = "calendar" # icon name without the 'fa-'
-      icon_pack = "fab"
+      icon      = "calendar-check" # icon name without the 'fa-'
+      icon_pack = "far"
       url       = "https://calendly.com/leonierettig/office-hours"
   #[[params.social]]
   #    icon      = "rss" # icon name without the 'fa-'
